[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reconi"
version = "0.1.0"
description = "Automated reconnaissance & OSINT tool for web application security testing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Reconi Contributors"}
]
keywords = ["security", "recon", "osint", "bugbounty", "pentesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "typer>=0.12,<1",
    "rich>=13,<14",
    "httpx>=0.27,<1",
    "celery>=5.4,<6",
    "redis>=5,<6",
    "sqlalchemy>=2.0,<3",
    "psycopg2-binary>=2.9,<3",
    "alembic>=1.13,<2",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "pyyaml>=6,<7",
    "openai>=1,<2",
    "python-dotenv>=1,<2",
    "aiofiles>=23,<24",
    "tenacity>=8,<9",
    "lxml>=5,<6",
    "beautifulsoup4>=4.12,<5",
    "tldextract>=5,<6",
    "cryptography>=42,<43",
    "pgvector>=0.3,<1",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<6",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3,<4",
    "bandit>=1.7,<2",
    "docker>=7,<8",
]

[project.scripts]
reconi = "reconi.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["reconi"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "C4", "T20"]

[tool.ruff.lint.isort]
known-first-party = ["reconi"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=reconi --cov-report=term-missing"
